# lol-lens

./: .oxlintrc.json  .prettierignore  eslint.config.mjs  package.json  tsconfig.json  vite.config.ts
.cursor/rules/: cargo.mdc  i18n.mdc  lint.mdc  pwsh.mdc  shadcn.mdc
.github/workflows/: release.yml
scripts/: increase-version.ts
src/: App.tsx  app.tsx  hooks.ts  i18n.ts  index.css  main.tsx  router.tsx  theme.tsx  utils.ts
src-tauri/: Cargo.toml  build.rs  manifest.xml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lcu.rs  lib.rs  main.rs  utils.rs
src/components/: lcu-api-tester.tsx  lcu-event-tester.tsx  lol-icon.tsx  lol-status-indicator.tsx  player-card.tsx  player-win-lose-badge.tsx  profile-icon.tsx  sidebar.tsx  sidenav.tsx  theme-provider.tsx
src/components/icons/: champion.tsx  cherry-augment.tsx  index.tsx  item.tsx  lol-icon.tsx  multi-kill.tsx  perk.tsx  placeholder.ts  profile.tsx  spell.tsx
src/components/player/: player-card.tsx  player-match-card.tsx  player-match-list.tsx  player-win-lose-badge.tsx
src/components/ui/: avatar.tsx  badge.tsx  card.tsx  select.tsx  separator.tsx  tooltip.tsx
src/lcu/: context.ts  endpoints.ts  events.ts  fetch.ts  logger.ts  mock-data.ts  provider.tsx  schemas.ts  types.ts  ws.ts
src/pages/: current-match.tsx  debug.tsx  me.tsx  user.tsx
src/utils/: disposable.ts  index.ts  time.ts
