[package]
name = "lol-lens"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lol_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.44.2", features = ["macros"] }
anyhow = "1.0.98"
windows-sys = "0.59.0"
regex = "1.11.1"
base64 = "0.22.1"
sysinfo = "0.35.0"
tauri-plugin-websocket = { version = "2", features = ["rustls-tls"] }
rustls = "0.23.27"
tokio-tungstenite = "0.26.2"
tauri-plugin-http = "2"
reqwest = "0.12.20"
tracing-subscriber = "*"

[patch.crates-io]
tauri-plugin-http = { path = "../../plugins-workspace/plugins/http" }
