[package]
name = "lol-lens"
version = "0.1.1"
description = "LoL Lens - League of Legends Helper Tool"
authors = ["you"]
edition = "2021"
license = "MIT"
repository = "https://github.com/your-username/lol-lens"
keywords = ["league-of-legends", "helper", "tauri"]
categories = ["games", "utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lol_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.44.2", features = ["macros"] }
anyhow = "1.0.98"
windows-sys = "0.59.0"
regex = "1.11.1"
base64 = "0.22.1"
sysinfo = "0.35.0"
tauri-plugin-websocket = { version = "2", features = ["rustls-tls"] }
rustls = "0.23.27"
tokio-tungstenite = "0.27.0"
tauri-plugin-http = "2"
reqwest = "0.12.20"
tracing-subscriber = "*"

[patch.crates-io]
tauri-plugin-http = { git = "https://github.com/L-Sun/plugins-workspace" }
